[gd_scene load_steps=18 format=2]

[ext_resource path="res://sprites/ui/show_answer_pressed.png" type="Texture" id=1]
[ext_resource path="res://sprites/character/Katana_Kat_Still.png" type="Texture" id=2]
[ext_resource path="res://scenes and scripts/kata_practice.gd" type="Script" id=3]
[ext_resource path="res://scenes and scripts/monster.gd" type="Script" id=4]
[ext_resource path="res://assets/NotoSansJP-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes and scripts/character.gd" type="Script" id=6]
[ext_resource path="res://sprites/character/Katana_Kat.png" type="Texture" id=7]
[ext_resource path="res://sprites/character/Katana_Kat_Zwischenframe.png" type="Texture" id=8]
[ext_resource path="res://sprites/ui/show_answer.png" type="Texture" id=9]
[ext_resource path="res://assets/Fonts/Gotham-Medium.otf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": true,
"name": "hit",
"speed": 9.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 13.0
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 15
border_color = Color( 0.317647, 0.74902, 0.839216, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id=10]
default_font = SubResource( 8 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.827451, 0.827451, 0.827451, 1 )
LineEdit/colors/font_color = Color( 0.29, 0.29, 0.29, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.34902, 0, 1, 0.501961 )
LineEdit/colors/selection_color = Color( 0.559, 0.804817, 0.86, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = SubResource( 8 )
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 9 )
LineEdit/styles/normal = SubResource( 9 )
LineEdit/styles/read_only = null

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[node name="kata_practice" type="Node2D"]
script = ExtResource( 3 )

[node name="monster" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="question" type="Label" parent="monster"]
margin_left = 420.0
margin_top = 579.0
margin_right = 508.0
margin_bottom = 663.0
custom_fonts/font = SubResource( 1 )

[node name="character" type="AnimatedSprite" parent="."]
position = Vector2( 207, 547 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 7 )
animation = "idle"
playing = true
script = ExtResource( 6 )

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="lineedit" type="LineEdit" parent="."]
margin_left = 45.0
margin_top = 720.0
margin_right = 530.0
margin_bottom = 820.0
theme = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
placeholder_text = "Click to start"

[node name="show_answer" type="TextureButton" parent="."]
margin_left = 575.0
margin_top = 720.0
margin_right = 675.0
margin_bottom = 820.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 1 )

[node name="reset_lineedit" type="LineEdit" parent="."]
margin_left = -264.0
margin_top = -94.0
margin_right = -206.0
margin_bottom = -70.0
virtual_keyboard_enabled = false

[node name="highscore_label" type="Label" parent="."]
margin_left = 102.0
margin_top = 1128.0
margin_right = 666.0
margin_bottom = 1451.0
custom_fonts/font = SubResource( 3 )

[connection signal="animation_finished" from="character" to="character" method="_on_character_animation_finished"]
[connection signal="focus_entered" from="lineedit" to="." method="_on_lineedit_focus_entered"]
[connection signal="focus_exited" from="lineedit" to="." method="_on_lineedit_focus_exited"]
[connection signal="text_changed" from="lineedit" to="." method="_on_lineedit_text_changed"]
[connection signal="pressed" from="show_answer" to="." method="_on_show_answer_pressed"]
